Explore mocha pending tests and mocha reporter functions - Remove after and afterEach from ship_test - Create test/game_test.js and add pending test example - Add reporter to mocha test and create test-document scripts in package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mocha": "^5.0.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha -- reporter list",
+    "test-document": "mocha --reporter markdown"
   },
   "author": "",
   "license": "ISC"
