Complete section on mocha --watch functions - Add a return to game_logic/game_instance - Add test for GAME INSTANCE FUNCTIONS in test/game_test - Add mocha file watchers to package.json

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^5.0.1"
+
   },
   "scripts": {
     "test": "mocha -- reporter list",
-    "test-document": "mocha --reporter markdown"
+    "test-document": "mocha --reporter markdown",
+    "test:watch": "mocha --watch ./test ./",
+    "test:watch:playerMethods": "mocha --watch ./test/player_test.js ./game_logic/player_methods.js"
   },
   "author": "",
   "license": "ISC"
